--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <link rel="stylesheet" href="./styles/pages/home/home.css">
+    <link rel="stylesheet" href="./styles/components/footer/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./styles/slick.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -80,7 +88,9 @@
                 </div>
                 <div class="person-quote">
                     <div>
-                        <p class="quote">“Let us reveal the power of social, which is creativity. business to the world not only by our words, but our actions.Let us go further and mobilise all our skills and trust in our endless resource of energy.”
+                        <p class="quote">“Let us reveal the power of social, which is creativity. business to the world
+                            not only by our words, but our actions.Let us go further and mobilise all our skills and
+                            trust in our endless resource of energy.”
                         </p>
                         <div class="designation">
                             <p>Hans Reitz</p>
@@ -118,10 +128,13 @@
                 <!-- inspire grid -->
                 <div class="inspire-grid">
                     <div class="inspire-left" id="inspireLeft">
-                        <p>We promote the concept of social business and inspire our ecosystem to change the world through our events, communication campaigns, and workshops for various organizations. We design and deliver:</p>
+                        <p>We promote the concept of social business and inspire our ecosystem to change the world
+                            through our events, communication campaigns, and workshops for various organizations. We
+                            design and deliver:</p>
                         <div class="listings">
                             <ol>
-                                <li>International platforms such as Global Social Business Summit, the flagship and biggest event on social business</li>
+                                <li>International platforms such as Global Social Business Summit, the flagship and
+                                    biggest event on social business</li>
                                 <li>Transformative workshops and trainings</li>
                                 <li>Innovative campaigns around change and impact with social business</li>
                             </ol>
@@ -153,12 +166,17 @@
                         </div>
                     </div>
                     <div class="educate-right" id="educateRight">
-                        <p>We design and offer a range of trainings and capacity building programs. Our goal is to transform mindsets and create responsible leaders who are aware of the role of social business in solving global challenges.</p>
+                        <p>We design and offer a range of trainings and capacity building programs. Our goal is to
+                            transform mindsets and create responsible leaders who are aware of the role of social
+                            business in solving global challenges.</p>
                         <div class="listings">
                             <ol>
-                                <li>Skill development programs such as Social Business Labs, ideation contests and system thinking workshops</li>
-                                <li>Leadership and capacity building programs to foster employee engagement and intrepreneurship programs with social business</li>
-                                <li>Strategic and self development programs to encourage responsible leadership at junior and senior level</li>
+                                <li>Skill development programs such as Social Business Labs, ideation contests and
+                                    system thinking workshops</li>
+                                <li>Leadership and capacity building programs to foster employee engagement and
+                                    intrepreneurship programs with social business</li>
+                                <li>Strategic and self development programs to encourage responsible leadership at
+                                    junior and senior level</li>
                             </ol>
                         </div>
                     </div>
@@ -166,12 +184,16 @@
                 <!-- create -->
                 <div class="create-grid">
                     <div class="create-left" id="createLeft">
-                        <p>We incubate social businesses by consulting corporations, foundations and social business entrepreneurs.</p>
+                        <p>We incubate social businesses by consulting corporations, foundations and social business
+                            entrepreneurs.</p>
                         <div class="listings">
                             <ol>
-                                <li>Partner to form ambitious joint venture social businesses between corporates and the Grameen ecosystem</li>
-                                <li>Collaborate with public private and multi stakeholder partners to create an infrastructure for social businesses (e.g. Social Business City Concept)</li>
-                                <li>Shape an ecosystem for social businesses within a country or region through acceleration and incubation programs</li>
+                                <li>Partner to form ambitious joint venture social businesses between corporates and the
+                                    Grameen ecosystem</li>
+                                <li>Collaborate with public private and multi stakeholder partners to create an
+                                    infrastructure for social businesses (e.g. Social Business City Concept)</li>
+                                <li>Shape an ecosystem for social businesses within a country or region through
+                                    acceleration and incubation programs</li>
                             </ol>
                         </div>
                     </div>
@@ -245,28 +267,36 @@
         <div class="people-say-body testimony-slider-container">
             <div class="testimony-data">
                 <div class="testimony-flex">
-                    <p class="quote">"We are very thankful for the creative impulses from Professor Yunus and the Grameen Creative Lab that led to the creation of a Solidarity Investment Fund. We are now looking forward to shaping the next project together with GCL."</p>
+                    <p class="quote">"We are very thankful for the creative impulses from Professor Yunus and the
+                        Grameen Creative Lab that led to the creation of a Solidarity Investment Fund. We are now
+                        looking forward to shaping the next project together with GCL."</p>
                     <p class="quote-author">Claudia Belli, Head of Social Business and Microfinance BNP Paribas</p>
                     <img src="./assets/logo/testimony/testimony_1.png" alt="">
                 </div>
             </div>
             <div class="testimony-data">
                 <div class="testimony-flex">
-                    <p class="quote">"Without Hans, Lamiya and the guiding spirit of Professor Yunus, One Young World would not exist. Thank you from the bottom of my heart for 11 years of support. We will never forget."</p>
+                    <p class="quote">"Without Hans, Lamiya and the guiding spirit of Professor Yunus, One Young World
+                        would not exist. Thank you from the bottom of my heart for 11 years of support. We will never
+                        forget."</p>
                     <p class="quote-author">Kate Robertson, Co-Founder One Young World</p>
                     <img src="./assets/logo/testimony/testimony_2.png" alt="">
                 </div>
             </div>
             <div class="testimony-data">
                 <div class="testimony-flex">
-                    <p class="quote">"Full of inspiration from the 'summer of purpose', we are convinced that our partnership with the Grameen Creative Lab pays off in the sustainable creation of a value-oriented future."</p>
+                    <p class="quote">"Full of inspiration from the 'summer of purpose', we are convinced that our
+                        partnership with the Grameen Creative Lab pays off in the sustainable creation of a
+                        value-oriented future."</p>
                     <p class="quote-author">Christian Heller, Chief Executive Officer Value Balancing Alliance</p>
                     <img src="./assets/logo/testimony/testimony_3.png" alt="">
                 </div>
             </div>
             <div class="testimony-data">
                 <div class="testimony-flex">
-                    <p class="quote">"With 'shaping mobility for generations to come' and a social business approach - which follows the triad of economic, ecological and social action - we at Volkswagen AG are facing up to change."</p>
+                    <p class="quote">"With 'shaping mobility for generations to come' and a social business approach -
+                        which follows the triad of economic, ecological and social action - we at Volkswagen AG are
+                        facing up to change."</p>
                     <p class="quote-author">Gunnar Kilian, Member of the Management Board Volkswagen AG</p>
                     <img src="./assets/logo/testimony/testimony_4.png" alt="">
                 </div>
@@ -279,23 +309,77 @@
     <section class="home-partnerships-section">
         <div class="partnership-header">
             <h2>Who worked with us</h2>
-            <p>In the past 10 years various organizations and leaders have joined our ecosystem to create an impact through social business. These are some of many. </p>
+            <p>In the past 10 years various organizations and leaders have joined our ecosystem to create an impact
+                through social business. These are some of many. </p>
         </div>
         <div class="partnership-body">
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/crop_original_albatros.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png"
+                        alt=""></a></div>
+            <div class="brand-container"><a href="/"><img
+                        src="./assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img
+                        src="./assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/crop_original_albatros.png"
+                        alt=""></a></div>
             <div class="brand-container"><a href="/"><img src="./assets/images/brands/Hec.jpg" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Global_Shapers_Logo.svg.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Global_Shapers_Logo.svg.png"
+                        alt=""></a></div>
             <div class="brand-container"><a href="/"><img src="./assets/images/brands/erste.svg" alt=""></a></div>
             <div class="brand-container"><a href="/"><img src="./assets/images/brands/otto.svg" alt=""></a></div>
             <div class="brand-container"><a href="/"><img src="./assets/images/brands/MM_rgb_logo.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/oyw-munich2021-logo-blue-web.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png"
+                        alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/oyw-munich2021-logo-blue-web.png"
+                        alt=""></a></div>
+            <div class="brand-container"><a href="/"><img
+                        src="./assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a></div>
         </div>
     </section>
+
+    <!-- footer -->
+    <footer class="footer-container">
+        <div class="footer-body">
+            <div class="grid-common footer-body-left">
+                <div>
+                    <h5>The Grameen Creative Lab</h5>
+                    <p>It is a social business founded by Professor Muhammad Yunus and Hans Reitz. Its vision is to serve society's most pressing needs.</p>
+                </div>
+                <div>
+                    <p>2022 &copy; The Grameen Creative Lab</p>
+                    <a href="/">Privacy policy</a>
+                    <a href="/" class="link-left">Imprint</a>
+                    <a href="/" class="link-left">Press</a>
+                </div>
+            </div>
+            <div class="grid-common footer-body-center">
+                <div>
+                    <h5>Discover more</h5>
+                </div>
+                <div>
+                    <img src="./assets/logo/yunus-center.png" alt="">
+                </div>
+                <div>
+                    <a href="/"><img src="./assets/icons/logo_gcl.png" alt=""></a>
+                    <a href="/" class="link-left"><img src="./assets/icons/logo_environment_hub.png" alt=""></a>
+                    <a href="/" class="link-left"><img src="./assets/icons/logo_sports_hub.png" alt=""></a>
+                </div>
+            </div>
+            <div class="grid-common footer-body-right">
+                <div>
+                    <h5>Follow us</h5>
+                </div>
+                <div class="media-icons">
+                    <a href="/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="/"><i class="fab fa-instagram"></i></a>
+                    <a href="/"><i class="fab fa-twitter"></i></a>
+                </div>
+                <div>
+                    <a href="/"><button>sign up for our newsletter</button></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- scripts -->
     <script src="./js/navbar.js"></script>
