view-service page and news article page done with responsive

--- a/about.html
+++ b/about.html
@@ -216,6 +216,11 @@
     </footer>
     <!-- FOOTER END-->
 
+    <!-- scripts -->
     <script src="./js/navbar.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/customSlick.js"></script>
+    <script src="./js/hoverGrid.js"></script>
+    <script src="./js/counterNumber.js"></script>
 </body>
 </html>
