--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- who we are -->
 
     <section class="who-we-are" id="who_we_are">
-        <!-- who we are -->
+        <!-- who we are header -->
         <div class="who-we-are-header">
             <div class="header-content">
                 <h2>Who we are</h2>
