fixed header component

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <!-- HEADER START -->
     <header class="header-section">
         <nav>
-            <div class="logo">
+            <div class="logo-container">
                 <a href="/"><img src="./assets/gcl_logo.png" alt="gcl-logo"></a>
             </div>
             <ul class="nav-links" id="navMenu">
