--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
             <ul class="nav-links" id="navMenu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
-                <li><a href="#">Social Business</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/social-business.html">Social Business</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/community.html">Community</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="burger-line line1"></div>
