--- a/community.html
+++ b/community.html
@@ -24,6 +24,29 @@
 
 <body>
 
+    <!-- HEADER START -->
+    <header class="header-section">
+        <nav>
+            <div class="logo-container">
+                <a href="/"><img src="./assets/gcl_logo.png" alt="gcl-logo"></a>
+            </div>
+            <ul class="nav-links" id="navMenu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/social-business.html">Social Business</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/community.html">Community</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="burger-line line1"></div>
+                <div class="burger-line line2"></div>
+                <div class="burger-line line3"></div>
+            </div>
+        </nav>
+    </header>
+    <!-- HEADER END -->
+
     <!-- home page banner -->
     <section class="community-banner">
         <div class="community-banner-content">
