press, contact us

--- a/community.html
+++ b/community.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <!-- home page banner -->
+    <!-- page banner -->
     <section class="community-banner">
         <div class="community-banner-content">
             <h2>Get the Latest Resources and News on our Work</h2>
@@ -32,7 +32,7 @@
         </div>
     </section>
 
-    <!-- service headline -->
+    <!-- community headline -->
     <section class="community-headline">
         <div>
             <h2>Community</h2>
