--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <!-- home page banner -->
+    <!-- page banner -->
     <section class="service-banner">
         <div class="service-banner-content">
             <h2>"The difference between rich and poor is not wealth but opportunity. The poor are the world’s greatest entrepreneurs. Each day they must innovate in order to survive."</h2>
