responsive done on home page, about page, social-business page, services

--- a/social-business.html
+++ b/social-business.html
@@ -133,8 +133,48 @@
     <!-- MAIN BODY END -->
 
     <!-- FOOTER START -->
-    <footer>
-
+    <footer class="footer-container">
+        <div class="footer-body">
+            <div class="grid-common footer-body-left">
+                <div>
+                    <h5>The Grameen Creative Lab</h5>
+                    <p>It is a social business founded by Professor Muhammad Yunus and Hans Reitz. Its vision is to serve society's most pressing needs.</p>
+                </div>
+                <div>
+                    <p>2022 &copy; The Grameen Creative Lab</p>
+                    <a href="/">Privacy policy</a>
+                    <a href="/" class="link-left">Imprint</a>
+                    <a href="/" class="link-left">Press</a>
+                </div>
+            </div>
+            <div class="grid-common footer-body-center">
+                <div>
+                    <h5>Discover more</h5>
+                </div>
+                <div>
+                    <img src="./assets/logo/yunus-center.png" alt="">
+                </div>
+                <div>
+                    <a href="/"><img src="./assets/icons/logo_gcl.png" alt=""></a>
+                    <a href="/" class="link-left"><img src="./assets/icons/logo_environment_hub.png" alt=""></a>
+                    <a href="/" class="link-left"><img src="./assets/icons/logo_sports_hub.png" alt=""></a>
+                </div>
+            </div>
+            <div class="grid-common footer-body-right">
+                <div>
+                    <h5>Follow us</h5>
+                </div>
+                <div class="media-icons">
+                    <a href="/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="/"><i class="fab fa-instagram"></i></a>
+                    <a href="/"><i class="fab fa-twitter"></i></a>
+                </div>
+                <div>
+                    <a href="/"><button>sign up for our newsletter</button></a>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- FOOTER END -->
 
