--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <li><a href="/services.html">Services</a></li>
                 <li><a href="/community.html">Community</a></li>
                 <li><a href="/contact.html">Contact</a></li>
-                
+
             </ul>
             <div class="burger">
                 <div class="burger-line line1"></div>
@@ -41,7 +41,7 @@
         <!-- FIRST SECTION START -->
         <section class="about__header">
             <div class="about__header--content">
-                <h2 class="heading">Unleashing the Power of Social Business to Bring Solutions to solve societies most pressing needs</h2>
+                <h2 class="about__header--heading">Unleashing the Power of Social Business to Bring Solutions to solve societies most pressing needs</h2>
             </div>
         </section>
         <!-- FIRST SECTION START -->
@@ -212,8 +212,48 @@
     <!-- MAIN BODY END -->
 
     <!-- FOOTER START-->
-    <footer>
-
+    <footer class="footer-container">
+        <div class="footer-body">
+            <div class="grid-common footer-body-left">
+                <div>
+                    <h5>The Grameen Creative Lab</h5>
+                    <p>It is a social business founded by Professor Muhammad Yunus and Hans Reitz. Its vision is to serve society's most pressing needs.</p>
+                </div>
+                <div>
+                    <p>2022 &copy; The Grameen Creative Lab</p>
+                    <a href="/">Privacy policy</a>
+                    <a href="/" class="link-left">Imprint</a>
+                    <a href="/" class="link-left">Press</a>
+                </div>
+            </div>
+            <div class="grid-common footer-body-center">
+                <div>
+                    <h5>Discover more</h5>
+                </div>
+                <div>
+                    <img src="./assets/logo/yunus-center.png" alt="">
+                </div>
+                <div>
+                    <a href="/"><img src="./assets/icons/logo_gcl.png" alt=""></a>
+                    <a href="/" class="link-left"><img src="./assets/icons/logo_environment_hub.png" alt=""></a>
+                    <a href="/" class="link-left"><img src="./assets/icons/logo_sports_hub.png" alt=""></a>
+                </div>
+            </div>
+            <div class="grid-common footer-body-right">
+                <div>
+                    <h5>Follow us</h5>
+                </div>
+                <div class="media-icons">
+                    <a href="/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="/"><i class="fab fa-instagram"></i></a>
+                    <a href="/"><i class="fab fa-twitter"></i></a>
+                </div>
+                <div>
+                    <a href="/"><button>sign up for our newsletter</button></a>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- FOOTER END-->
 
