--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
                 <img src="./assets/icons/ecllipse.svg" alt="">
             </div>
             <div class="what-we-do-body">
+                <!-- path line -->
+                <div class="path-line">
+                    <svg viewBox="0 0 2 1172" fill="red" preserveAspectRatio="xMidYMax meet">
+                        <path d="M1 0L1 1172" stroke="#72725D" stroke-width="2" />
+                    </svg>
+                </div>
                 <!-- inspire grid -->
                 <div class="inspire-grid">
                     <div class="inspire-left" id="inspireLeft">
@@ -389,6 +395,7 @@
     <script src="./js/customSlick.js"></script>
     <script src="./js/hoverGrid.js"></script>
     <script src="./js/counterNumber.js"></script>
+    <script src="./js/pathLineAnimate.js"></script>
 </body>
 
 </html>
