news-article page responsive done

--- a/news-article.html
+++ b/news-article.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./styles/pages/news-article/news-article.css">
-    <link rel="stylesheet" href="./styles/components/footer/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="">
@@ -82,9 +81,9 @@
                     </div>
                 </div>
                 <div class="btn-container">
-                    <button class="action-btn"><i class="fa-solid fa-arrow-left-long"></i> Previous article</button>
-                    <button class="action-btn">View all news</button>
-                    <button class="action-btn">Next article <i class="fa-solid fa-arrow-right-long"></i></button>
+                    <a href="#" class="action-btn"><i class="fa-solid fa-arrow-left-long"></i> Previous article</a>
+                    <a href="#" class="action-btn">View all news</a>
+                    <a href="#" class="action-btn">Next article <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
 
             </section>
