--- a/team-member.html
+++ b/team-member.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/styles/pages/team-member/team-member.css">
-    <link rel="stylesheet" href="/styles/components/header/header.css">
 
     <title>Document</title>
 </head>
@@ -14,16 +13,16 @@
     <!-- HEADER START -->
     <header class="header-section">
         <nav>
-            <div class="logo">
+            <div class="logo-container">
                 <a href="/"><img src="./assets/gcl_logo.png" alt="gcl-logo"></a>
             </div>
             <ul class="nav-links" id="navMenu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
-                <li><a href="#">Social Business</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/social-business.html">Social Business</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/community.html">Community</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="burger-line line1"></div>
