social-business page responsive done

--- a/social-business.html
+++ b/social-business.html
@@ -120,7 +120,7 @@
                         <li class="item">But remember: Any profit from the company's activities is to remain in the company and may not be paid out to investors as a dividend.</li>
                     </ul>
                 </div>
-                <div class="social-business__goal--image container-1">
+                <div class="social-business__goal--image">
                     <img class="img" src="./assets/images/social-business_4.png" alt="goal image">
                 </div>
             </div>
