team-member page responsive done

--- a/team-member.html
+++ b/team-member.html
@@ -45,7 +45,7 @@
             <div class="team-member__info--text-container">
                 <img src="/assets/custom-layer/Layer 2.png" class="layout" alt="custom layer">
                 <h2 class="name">Prof. <br/> Muhammad Yunus</h2>
-                <h5 class="designation mt-2">Co-founder & Chairman</h5>
+                <h5 class="designation mt-2 mb-2">Co-founder & Chairman</h5>
                 <div class="details-container">
                     <p class="text">Professor Muhammad Yunus co-founded Yunus Environment Hub and currently serves as the Chairman of the Board.</p>
                     <p class="text">He is the founder of Grameen Bank and father of microcredit, an economic movement that has helped lift millions of families around the world out of poverty. Today, Grameen Bank has over 9 million members—97 per cent of who are female—and has lent over US$ 26 billion since its inception. In 2006, the Norwegian Nobel Committee jointly awarded the Nobel Prize in Peace to Professor Yunus and Grameen Bank “for their efforts to create economic and social development from below.”</p>
