about page is complete with responsive

--- a/about.html
+++ b/about.html
@@ -52,19 +52,19 @@
                 <h1 class="about__us--heading">About us</h1>
                 <div class="about__us--btn-group">
                     <div class="group-1">
-                        <button class="btn btn-primary">Our History</button>
-                        <button class="btn btn-primary">Our Vision & Mission</button>
-                        <button class="btn btn-primary">The Spirit of YY</button>
+                        <a href="#history"><button class="btn btn-primary">Our History</button></a>
+                        <a href="#vision"><button class="btn btn-primary">Our Vision & Mission</button></a>
+                        <a href="#spirit"><button class="btn btn-primary">The Spirit of YY</button></a>
                     </div>
                     <div class="group-2">
-                        <button class="btn btn-primary">Our Contribution</button>
-                        <button class="btn btn-primary">Our Team</button>
-                        <button class="btn btn-primary">Our Family</button>
+                        <a href="#contribution"><button class="btn btn-primary">Our Contribution</button></a>
+                        <a href="#team"><button class="btn btn-primary">Our Team</button></a>
+                        <a href="#family"><button class="btn btn-primary">Our Family</button></a>
                     </div>
                 </div>
             </div>
             <div class="about__us--info">
-                <div class="info-1 text-container">
+                <div class="info-1 text-container" id="history">
                     <h3 class="mb-2">Our History</h3>
                     <div class="content">
                         <p>In April 2008, Professor Muhammad Yunus visited Germany. A first contact between Grameen and BASF, one of Hans Reitz's clients, was established. Together with Mr. Hambrecht, CEO of BASF, they developed an idea of a Joint Venture between BASF and Grameen.</p>
@@ -76,7 +76,7 @@
                 <div class="image-1 img-container">
                     <img src="/assets/images/about_1.jpg" alt="image 1" class="img">
                 </div>
-                <div class="info-2 text-container">
+                <div class="info-2 text-container" id="vision">
                     <h3 class="mb-2">Our vision, mission & values</h3>
                     <div class="content">
                         <p>Through creating an ecosystem where social business flourishes and solves the most pressing problems of our times, we are paving the way for a world of three zeroes-zero poverty, zero unemployment and zero net carbon emissions.</p>
@@ -87,7 +87,7 @@
                 <div class="image-2 img-container">
                     <img src="/assets/images/about_2.jpg" alt="image 1" class="img">
                 </div>
-                <div class="info-3 text-container">
+                <div class="info-3 text-container" id="spirit">
                     <h3 class="mb-2">The Spirit of YY Yunus + Your Mission</h3>
                     <div class="content">
                         <p>With the tools created by Professor Muhammad Yunus, You can create an impact! We live by our principle of social business and "do it with joy". This creative and entrepreneurial spirit, along with our expertise and know-how accumulated over the years helps us to create the most innovative solutions to social problems.</p>
@@ -101,7 +101,7 @@
         <!-- ABOUT US SECTION END -->
 
         <!-- CONTRIBUTION SECTION START -->
-        <section class="about__contribution container-1">
+        <section class="about__contribution container-1" id="contribution">
             <div class="container">
                 <h3>Our Contribution</h3>
                 <p class="text">In providing our services, we contribute to the achievement of Sustainable Development Goals, while always contributing to Professor Yunus' vision of "A World of Three Zeroes: Zero Poverty, Zero Unemployment and Zero Net Carbon Emissions.</p>
@@ -114,7 +114,7 @@
         <!-- CONTRIBUTION SECTION END -->
 
         <!-- TEAM SECTION START -->
-        <section class="about__team container-1">
+        <section class="about__team container-1" id="team">
             <h3 class="about__team--heading">Our Team</h3>
             <div class="about__team--container">
                 <div class="member">
@@ -195,7 +195,7 @@
         <!-- TEAM SECTION END -->
 
         <!-- FAMILY SECTION END -->
-        <section class="about__family container-1">
+        <section class="about__family container-1" id="family">
             <h3 class="about__family--heading">Our family</h3>
             <div class="about__family--logo-container">
                 <a href="#"><img class="logo" src="/assets/logo/yunus_centre-logo.png" alt="family logo"></a>
